@@ -751,8 +751,21 @@ b.conum * { color: inherit !important; }
 <div class="sect1">
 <h2 id="__strong_release_notes_version_3_1_79_11_strong"><strong>Release Notes Version 3.1.79-11</strong></h2>
 <div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p>Date of release: 01/Jule/2017</p>
+</li>
+<li>
+<p>Type: Stable</p>
+</li>
+<li>
+<p>Main changes: redborder manager and IPS.</p>
+</li>
+</ul>
+</div>
 <div class="paragraph">
-<p>This is the release notes for version 3.1.79-11.</p>
+<p>This is the release notes for version 3.1.79-11. The main goal for this version has been focused on the new licensing model, including IPS sensors, and a first approach to LDAP authentication. Multiple bugs and security bugs has been reported and fixed, prior the next release LTS.</p>
 </div>
 <div class="sect2">
 <h3 id="_what_s_new">What&#8217;s new</h3>
