@@ -1,6 +1,10 @@
 == **Release Notes Version 3.1.79-11**
 
-This is the release notes for version 3.1.79-11.
+* Date of release: 01/Jule/2017
+* Type: Stable
+* Main changes: redborder manager and IPS.
+
+This is the release notes for version 3.1.79-11. The main goal for this version has been focused on the new licensing model, including IPS sensors, and a first approach to LDAP authentication. Multiple bugs and security bugs has been reported and fixed, prior the next release LTS.
 
 === What's new
 
